# mcp-lexoffice

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
.skill-archive/logo-creator/2026-04-03-mcp-custom-logos/: bildsprache-icon.datauri  bildsprache.datauri  klartext-icon.datauri  klartext.datauri  preview.html  stolperstein-icon.datauri  stolperstein.datauri  writings-icon.datauri  writings.datauri
mcp_lexoffice/: auth.py  client.py  server.py
openspec/changes/mvp-scaffold/: design.md  proposal.md  tasks.md
openspec/changes/mvp-scaffold/specs/article-catalog/: spec.md
openspec/changes/mvp-scaffold/specs/dunning/: spec.md
openspec/changes/mvp-scaffold/specs/financial-queries/: spec.md
openspec/changes/mvp-scaffold/specs/invoice-lifecycle/: spec.md
openspec/changes/mvp-scaffold/specs/quotation-lifecycle/: spec.md
openspec/changes/mvp-scaffold/specs/server-transport/: spec.md
openspec/changes/mvp-scaffold/specs/voucher-ingestion/: spec.md
tests/: conftest.py  test_client.py  test_server.py
