[project]
name = "mcp-lexoffice"
version = "0.1.0"
description = "MCP server for Lexware Office (formerly Lexoffice) — invoices, contacts, and accounting"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["mcp_lexoffice*"]

[project.scripts]
mcp-lexoffice = "mcp_lexoffice.server:main"
