[project]
name = "mcp-lexoffice"
version = "0.1.0"
description = "MCP server for Lexware Office (formerly Lexoffice) — invoices, contacts, and accounting"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["mcp_lexoffice*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
mcp-lexoffice = "mcp_lexoffice.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
